# rusty-lidar

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: leds.rs  lidar.rs  main.rs
