[package]
name = "rusty-lidar"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b793d31f25cbf2388f6073cd795ddda996829335", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b793d31f25cbf2388f6073cd795ddda996829335", features = ["defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b793d31f25cbf2388f6073cd795ddda996829335", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "b793d31f25cbf2388f6073cd795ddda996829335", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

cyw43 = {git = "https://github.com/embassy-rs/embassy", rev = "b793d31f25cbf2388f6073cd795ddda996829335", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "b793d31f25cbf2388f6073cd795ddda996829335", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

smart-leds = "0.4.0"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }

static_cell = { version = "2.1.0", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"